--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,9 @@
     <string name="app_name">Projet1</string>
 
     <!-- // TODO : Create 3 variables (Name, Email, Password) -->
+    <string name="Name">name</string>
+    <string name="Mail">Email</string>
+    <string name="Password">password</string>
+
 
 </resources>
