--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,10 @@
     <string name="app_name">Projet1</string>
 
     <!-- // TODO : Create 3 variables (Name, Email, Password) -->
-    <string name="Name">name</string>
-    <string name="Mail">Email</string>
-    <string name="Password">password</string>
+    <string name="name">name</string>
+    <string name="email">Email</string>
+    <string name="password">password</string>
+    <string name="btn_register">register</string>
 
 
 </resources>
